Issue #24: Add pos: relative to wc-Form-upload to prevent pos: abs input from being too big.

--- a/webcompat/static/css/development/components/form.css
+++ b/webcompat/static/css/development/components/form.css
@@ -139,6 +139,7 @@ legend.wc-Form-label {
 /* upload */
 .wc-Form-upload {
   text-align: center;
+  position: relative;
 }
   .wc-Form-upload-icon {
     font-size: 1.2em;
